--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <img src="images/PoP-0.png" class="card-img-top myHoverEffect" style="z-index: 2; height: 430px;">
   <img src="images/Pop-01.png" class="card-img-top myHoverEffect-2" style="z-index: 1; height: 430px;">
   <div class="card-body">
-    <h5 class="card-title">Ben Tennyson</h5>
+    <h5 class="card-title">Prince of Persia</h5>
 
   </div>
 </div>
@@ -25,7 +25,7 @@
   <img src="images/Ragnar-01.png" class="card-img-top myHoverEffect-2" style="z-index: 1; height: 430px;">
   
   <div class="card-body">
-    <h5 class="card-title">Ben Tennyson</h5>
+    <h5 class="card-title">Ragnar Lothbrok</h5>
     
   </div>
 </div>
@@ -34,8 +34,9 @@
   <img src="images/taklu-01.png" class="card-img-top myHoverEffect-2" style="z-index: 1; height: 430px;">
 
   <div class="card-body">
-    <h5 class="card-title">Ben Tennyson</h5>
+    <h5 class="card-title">Master of Spells</h5>
   </div>
 </div>
 </body>
+
 </html>
